# project-template

./: CMakeLists.txt  README.md
scripts/: install-cmake.sh  install-opencv.sh
src/: main.cpp
